# opengl-homeworks

./: CMakeLists.txt  README.md  ps.md
hw2b/: .gitignore  ps.md
hw2c/src/: main.cpp  vec3.hpp
src/: HW2b.cpp  ShaderStuff.hpp  fragment_shader.glsl  main.cpp  mat4.hpp  shader.frag  shader.vert  shader_compiler.hpp  vertex_shader.glsl  vshader2b.glsl
